WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276344
RemotePlayback watchAvailability callback can leak the Document object.
https://bugs.webkit.org/show_bug.cgi?id=276344
Summary
RemotePlayback watchAvailability callback can leak the Document object.
Ryan Reno
Reported
2024-07-08 17:40:24 PDT
The RemotePlayback watchAvailability callback is only cleared if cancelWatchAvailability is called by the web author. We should clear the registered callbacks that haven't fired or been cancelled yet when Active DOM objects are stopped.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-08 17:40:35 PDT
<
rdar://problem/131345363
>
Ryan Reno
Comment 2
2024-07-08 17:43:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30586
EWS
Comment 3
2024-07-09 17:50:25 PDT
Committed
280799@main
(f288b9088d1b): <
https://commits.webkit.org/280799@main
> Reviewed commits have been landed. Closing PR #30586 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug