RemotePlayback watchAvailability callback can leak the Document object. https://bugs.webkit.org/show_bug.cgi?id=276344 rdar://131345363

Reviewed by Ryosuke Niwa.

RemotePlayback's watchAvailibility callback can leak captures, including
the Document object, if cancelWatchAvailability is not called by the web
author. This change will clear all registered callbacks when
ActiveDOMObject::stop is called allowing the callback and captures to be
garbage collected.

* LayoutTests/platform/glib/media/media-source/remoteplayback-availability-callback-does-not-leak-expected.txt: Added.
* LayoutTests/media/media-source/remoteplayback-availability-callback-does-not-leak-expected.txt: Added.
* LayoutTests/media/media-source/remoteplayback-availability-callback-does-not-leak.html:
* LayoutTests/media/media-source/resources/remoteplayback-watch-availability-frame.html:
* LayoutTests/resources/document-leak-test.js:
(iframeSentMessage):
* Source/WebCore/Modules/remoteplayback/RemotePlayback.cpp:
(WebCore::RemotePlayback::stop):
* Source/WebCore/Modules/remoteplayback/RemotePlayback.h:

Canonical link: https://commits.webkit.org/280799@main